docs/build/iota-sdk/1.0/docs/how-tos/native-tokens/burn.mdx
---
title: Burn Native Tokens
sidebar_label: Burn
description: 'How to burn native tokens'
image: /img/logo/iota_mark_light.png
keywords:
  - how to
  - burn
  - burn native token
  - foundry
  - nodejs
  - python
  - rust
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import DestroyFoundry from '../../_admonitions/_destroy_foundry.md';

Burning native tokens refers to the permanent removal or destruction of those tokens from circulation. It renders the
tokens unusable and reduces their total supply, often done to maintain scarcity, increase the value of remaining tokens,
or enforce specific rules within an ecosystem.

<DestroyFoundry />

## Example Code

<Tabs groupId="language" queryString>
<TabItem value="rust" label="Rust">

The following example will:

1. Instantiate a [`Wallet`](https://docs.rs/iota-sdk/latest/iota_sdk/wallet/core/struct.Wallet.html), get Alice's `Account` which was
   [created in the first guide](../accounts-and-addresses/create-account.mdx) and [sync it](../accounts-and-addresses/check-balance.mdx).
2. Search the account's balance for a native token with a balance of at least `MIN_AVAILABLE_AMOUNT` (to be able to burn BURN_AMOUNT).

<div className={'hide-code-block-extras'}>

```rust reference
https://github.com/iotaledger/iota-sdk/blob/develop/sdk/examples/how_tos/native_tokens/burn.rs#L55-L56
```

</div>

3. Burn the native tokens by calling the [`Account.burn()`](https://docs.rs/iota-sdk/latest/iota_sdk/wallet/account/struct.Account.html#method.burn)
   function.

<div className={'hide-code-block-extras'}>

```rust reference
https://github.com/iotaledger/iota-sdk/blob/develop/sdk/examples/how_tos/native_tokens/burn.rs#L66
```

</div>

</TabItem>
<TabItem value="typescript-node" label="Typescript (Node.js)">

The following example will:

1. Instantiate a [`Wallet`](https://docs.rs/iota-sdk/latest/iota_sdk/wallet/core/struct.Wallet.html), get Alice's `Account` which was
   [created in the first guide](../accounts-and-addresses/create-account.mdx) and [sync it](../accounts-and-addresses/check-balance.mdx).
2. Search the account's balance for a native token with a balance of at least `MIN_AVAILABLE_AMOUNT`.

<div className={'hide-code-block-extras'}>

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/develop/bindings/nodejs/examples/how_tos/native_tokens/burn.ts#L37-L39
```

</div>

3. Prepare the transaction that will burn the tokens using the [`Account.prepareBurnNativeToken()`](../../references/nodejs/classes/Account.md#prepareburnnativetoken)
   function and send the prepared transaction using the [`Account.send()`](../../references/nodejs/classes/Account.md#send)
   function.

<div className={'hide-code-block-extras'}>

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/develop/bindings/nodejs/examples/how_tos/native_tokens/burn.ts#L57-L59
```

</div>

</TabItem>
<TabItem value="python" label="Python">

The following example will:

1. Instantiate a [`Wallet`](https://docs.rs/iota-sdk/latest/iota_sdk/wallet/core/struct.Wallet.html), get Alice's `Account` which was
   [created in the first guide](../accounts-and-addresses/create-account.mdx) and [sync it](../accounts-and-addresses/check-balance.mdx).
2. Search the account's balance for a native token with a balance of at least 10.

<div className={'hide-code-block-extras'}>

```python reference
https://github.com/iotaledger/iota-sdk/blob/develop/bindings/python/examples/how_tos/native_tokens/burn.py#L24-L27
```

</div>

3. Prepare the transaction that will burn the tokens using the [`Account.prepare_burn_native_token()`](../../references/python/iota_sdk/wallet/account.md#prepare_burn_native_token)
   function and send the prepared transaction using the [`Account.send()`](../../references/python/iota_sdk/wallet/account.md#send)
   function.

<div className={'hide-code-block-extras'}>

```python reference
https://github.com/iotaledger/iota-sdk/blob/develop/bindings/python/examples/how_tos/native_tokens/burn.py#L33-L34
```

</div>

</TabItem>
</Tabs>

### Full Example Code

<Tabs groupId="language" queryString>
<TabItem value="rust" label="Rust">

```rust reference
https://github.com/iotaledger/iota-sdk/blob/develop/sdk/examples/how_tos/native_tokens/burn.rs
```

</TabItem>
<TabItem value="typescript-node" label="Typescript (Node.js)">

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/develop/bindings/nodejs/examples/how_tos/native_tokens/burn.ts
```

</TabItem>
<TabItem value="python" label="Python">

```python reference
https://github.com/iotaledger/iota-sdk/blob/develop/bindings/python/examples/how_tos/native_tokens/burn.py
```

</TabItem>
</Tabs>

### Expected Output

```plaintext
Balance before burning: 30
Transaction sent: 0x8c93b86b003b0476266f1d4d0c486dfcbbb72d4991eb5d63d5466a6cad93e9f2
Block included: https://explorer.shimmer.network/testnet/block/0x49e2ec7ac5a88b1b0ffcde20bff437b53ef74f38368c28af402435f45dd5b138
Balance after burning: 29
```
