docs/build/iota-sdk/2.0/docs/how-tos/native-tokens/burn.mdx
---
title: Burn Native Tokens
sidebar_label: Burn
description: 'How to burn native tokens'
image: /img/logo/iota_mark_light.png
tags:
  - how to
  - burn
  - burn native token
  - foundry
  - nodejs
  - python
  - rust
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import DestroyFoundry from '../../_admonitions/_destroy_foundry.md';

Burning native tokens refers to the permanent removal or destruction of those tokens from circulation. It renders the
tokens unusable and reduces their total supply, often done to maintain scarcity, increase the value of remaining tokens,
or enforce specific rules within an ecosystem.

<DestroyFoundry />

## Example Code

<Tabs groupId="language" queryString>
<TabItem value="rust" label="Rust">

The following example will:

1. Instantiate a [`Wallet`](file:///home/lucas/Documents/IOTA/iota-sdk/target/doc/iota_sdk/wallet/core/struct.Wallet.html) and [sync it](../accounts-and-addresses/check-balance.mdx).
2. Search the account's balance for a native token with a balance of at least `MIN_AVAILABLE_AMOUNT` (to be able to burn BURN_AMOUNT).

<div className={'hide-code-block-extras'}>

```rust reference
https://github.com/iotaledger/iota-sdk/blob/2.0/sdk/examples/how_tos/native_tokens/burn.rs#L52-L55
```

</div>

3. Burn the native tokens by calling the [`Wallet.burn()`](file:///home/lucas/Documents/IOTA/iota-sdk/target/doc/iota_sdk/wallet/core/struct.Wallet.html#method.burn)
   function.

<div className={'hide-code-block-extras'}>

```rust reference
https://github.com/iotaledger/iota-sdk/blob/2.0/sdk/examples/how_tos/native_tokens/burn.rs#L65
```

</div>

4. Await for the transaction to be accepted by the network by calling the [`Wallet.wait_for_transaction_acceptance()`](file:///home/lucas/Documents/IOTA/iota-sdk/target/doc/iota_sdk/wallet/core/struct.Wallet.html#method.wait_for_transaction_acceptance) function.

<div className={'hide-code-block-extras'}>

```rust reference
https://github.com/iotaledger/iota-sdk/blob/2.0/sdk/examples/how_tos/native_tokens/burn.rs#L68-L70
```

</div>

</TabItem>
<TabItem value="typescript-node" label="Typescript (Node.js)">

The following example will:

1. Instantiate a [`Wallet`](http://localhost:3000/iota-sdk/2.0/references/nodejs/classes/Wallet) and [sync it](../accounts-and-addresses/check-balance.mdx).
2. Search the account's balance for a native token with a balance of at least `MIN_AVAILABLE_AMOUNT`.

<div className={'hide-code-block-extras'}>

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/nodejs/examples/how_tos/native_tokens/burn.ts#L34-L45
```

</div>

3. Prepare the transaction that will burn the tokens using the [`Wallet.prepareBurnNativeToken()`](../../references/nodejs/classes/Wallet.md#prepareburnnativetoken)
function and send the prepared transaction using the [`Wallet.send()`](../../references/nodejs/classes/Wallet.md#send)
function.

<div className={'hide-code-block-extras'}>

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/nodejs/examples/how_tos/native_tokens/burn.ts#L50-L52
```

</div>

4. Await for the [`Transaction`](../../references/nodejs/classes/Transaction.md) to get confirmed by calling the
[`Wallet.waitForTransactionAcceptance()`](../../references/nodejs/classes/Wallet.md#waitfortransactionacceptance)
function.

<div className={'hide-code-block-extras'}>

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/nodejs/examples/how_tos/native_tokens/burn.ts#L56
```

</div>
</TabItem>
<TabItem value="python" label="Python">

The following example will:

1. Instantiate a [`Wallet`](http://localhost:3000/iota-sdk/2.0/references/python/iota_sdk/wallet/) and [sync it](../accounts-and-addresses/check-balance.mdx).

2. Search the account's balance for a native token with a balance of at least 10.

<div className={'hide-code-block-extras'}>

```python reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/python/examples/how_tos/native_tokens/burn.py#L20-L21
```

</div>

3. Prepare the transaction that will burn the tokens using the [`Wallet.prepare_burn_native_token()`](../../references/python/iota_sdk/wallet/wallet.md#prepare_burn_native_token)
   function and send the prepared transaction using the [`Wallet.send()`](../../references/python/iota_sdk/wallet/wallet.md#send)
   function.

<div className={'hide-code-block-extras'}>

```python reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/python/examples/how_tos/native_tokens/burn.py#L27-L28
```

</div>

4. Await for the transaction to get accepted by calling the [`Wallet.wait_for_transaction_acceptance()`](../../references/python/iota_sdk/wallet/wallet.md#wait_for_transaction_acceptance)
function.

<div className={'hide-code-block-extras'}>

```python reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/python/examples/how_tos/native_tokens/burn.py#L31-L32
```

</div>

</TabItem>
</Tabs>

### Full Example Code

<Tabs groupId="language" queryString>
<TabItem value="rust" label="Rust">

```rust reference
https://github.com/iotaledger/iota-sdk/blob/2.0/sdk/examples/how_tos/native_tokens/burn.rs
```

</TabItem>
<TabItem value="typescript-node" label="Typescript (Node.js)">

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/nodejs/examples/how_tos/native_tokens/burn.ts
```

</TabItem>
<TabItem value="python" label="Python">

```python reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/python/examples/how_tos/native_tokens/burn.py
```

</TabItem>
</Tabs>

### Expected Output

```plaintext
Balance before burning: 30
Transaction sent: 0x8c93b86b003b0476266f1d4d0c486dfcbbb72d4991eb5d63d5466a6cad93e9f2
Block included: https://explorer.shimmer.network/testnet/block/0x49e2ec7ac5a88b1b0ffcde20bff437b53ef74f38368c28af402435f45dd5b138
Balance after burning: 29
```
